tests/snapshots/integration__compgen__compgen_help2.snap
---
source: tests/compgen.rs
expression: output
---
RUN
help cmd

STDOUT
cmd_preferred	Preferred
cmd_omitted	Omitted
cmd_flag_names	Flags all kind of names
cmd_no_long_flags	Flags without long name
cmd_option_names	Options all kind of names
cmd_no_long_options	Options without long name
cmd_option_formats	Options all kind of formats
cmd_option_quotes	Option value quoted
cmd_option_notations	Option with value notations
cmd_flag_formats	All kind of flags
cmd_positional_only	Positional one required
cmd_positional_many	Positional all required
cmd_positional_requires	Positional all required
cmd_positional_with_choices	Positional with choices
cmd_positional_with_default	Positional with default value
cmd_positional_with_default_fn	Positional with default value
cmd_positional_with_choices_and_default	Positional with choices and value
cmd_positional_with_choices_fn	Positional with choices and value
cmd_positional_with_choices_and_required	Positional with choices and required
cmd_positional_with_choices_fn_and_required	Positional with choices and value
cmd_without_any_arg	Command without any arg
cmd_alias	Command with alias
cmd_with_hyphens	Command with hyphens
cmd_nested_command	Nested command
cmd_nested_command2	Nested command2
cmd_notation_values	Notation values
cmd_dynamic_compgen	Dynamic compgen
cmd_combine_shorts	Combine shorts
cmd_single_dash	Single dashe options

STDERR


