tests/snapshots/integration__compgen__compgen_help_tag.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_nested_command

STDOUT
cmd_nested_command	Nested command
cmd_nested_command2	Nested command2

STDERR


