tests/snapshots/integration__compgen__compgen_help_tag2.snap
---
source: tests/compgen.rs
assertion_line: 63
expression: output
---
RUN
prog help

STDOUT
foo bar

STDERR


