tests/snapshots/integration__compgen__compgen_hide_help.snap
---
source: tests/compgen.rs
assertion_line: 38
expression: output
---
RUN
prog a

STDOUT


STDERR


