tests/snapshots/integration__compgen__compgen_many_positionals.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_positional_many foo 

STDOUT
[ARG2]

STDERR


