tests/snapshots/integration__compgen__compgen_multiple_notation.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_notations --opt2

STDOUT


STDERR


