tests/snapshots/integration__compgen__compgen_multiple_notation3.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_notations --opt2 foo 

STDOUT
__argc_value!FOO2

STDERR


