tests/snapshots/integration__compgen__compgen_multiple_notation4.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_notations --opt2 foo bar

STDOUT
<FOO2>

STDERR


