tests/snapshots/integration__compgen__compgen_nested_command.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_nested_command 

STDOUT
foo	Subcommand of nested command
a	Subcommand of nested command

STDERR


