tests/snapshots/integration__compgen__compgen_nested_command_subcommand.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_nested_command foo 

STDOUT
--opt1
--opt2

STDERR


