tests/snapshots/integration__compgen__compgen_nested_command_subcommand2.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_nested_command fo

STDOUT
foo

STDERR


